compiler/kernc_cli/tests/soundness/run-pass/supertraits/generic_assoc_trait_object_upcast_to_bare_supertrait.kn
// exit: 0

trait Base[T] {
    fn value() T;
};

trait Derived: Base[Apply[i32]] {
    type Apply[T];
};

struct Id {};

impl &Id: Base[i32] {
    fn value() i32 {
        return 7;
    }
}

impl &Id: Derived {
    type Apply[T] = T;
}

fn main() i32 {
    let id = Id.{};
    let derived = (id.& as &Derived);
    let base = (derived as &Base[i32]);
    return base.value() - 7;
}
