compiler/kernc_cli/tests/soundness/reject/closures/function_item_callback_does_not_synthesize_trait_object_return_upcast.kn
// source: callback coercions must not synthesize a thunk that upcasts a trait-object return value
// stderr: expected `&Fn(&X) &Base[4]`

trait Base[N: usize] {
    fn tag() i32;
};

trait Derived[N: usize]: Base[N] {};

struct X {};

impl &X: Derived[4] {}

impl &X: Base[4] {
    fn tag() i32 {
        return 7;
    }
}

fn make(ptr: &X) &Derived[4] {
    return (ptr as &Derived[4]);
}

fn take(cb: &Fn(&X) &Base[4]) i32 {
    let x = X.{};
    let base = cb(x.&);
    return base.tag();
}

fn main() i32 {
    return take(make) - 7;
}
